scrollbar fix

--- a/css/calculator_style.css
+++ b/css/calculator_style.css
@@ -82,7 +82,7 @@ body {
   border-radius: 5px;
   padding: 10px;
   margin-bottom: 10px;
-  overflow-x: scroll; /* Makes it scroll horizontally when the expression becomes to wide*/
+  overflow-x: hidden; /* Makes it scroll horizontally when the expression becomes to wide*/
   white-space: nowrap;
   transition: box-shadow 0.3s, background-color 0.3s;
 }
@@ -92,8 +92,7 @@ body {
   transition: box-shadow 0.3s;
 }
 
-
-
+/*Calculator Display input field*/
 .display input {
   width: 1px; 
   min-width: 100%; 
@@ -150,8 +149,8 @@ button:hover {
   max-width: 300px;
   width: 100%;
   max-height: 300px;
-  overflow-y: scroll;
-  overflow-x: scroll;
+  overflow-y: auto;
+  overflow-x: auto;
   border-radius: 20px;
   transition: box-shadow 0.3s;
 }
